--- a/styles/style.css
+++ b/styles/style.css
@@ -3,11 +3,48 @@
 }
 
 body{
-    width: 1140px;
     font-family: 'Open Sans', sans-serif;
 }
 
 /* Shared Style */
 .orange-text {
     color: orange;
+}
+
+.primary-btn {
+    background-color: #FD6E0A;
+    border: none;
+    padding: 18px 36px;
+    color: #fff;
+    font-size: 20px;
+}
+
+/* Navigation Area */
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 51px;
+    padding-left: 20px;
+    align-items: center;
+
+}
+.navigation .navigation-title {
+    font-size: 45px;
+    font-weight: 800;
+}
+
+.navigation ul{
+    display: flex;
+    list-style: none;
+    align-items: center;
+}
+.navigation ul li {
+    margin-left: 10px;
+}
+
+.navigation ul a {
+    text-decoration: none;
+    color: #474747;
+    font-size: 20px;
+    padding: 10px 20px;
 }
